# NIS2expert

./: .env.example  .gitignore  CONTRIBUTING.md  PROJECT_SUMMARY.txt  QUICKSTART.md  README.md  config.yaml  main.py  pyproject.toml  requirements.txt  setup.py  validate_structure.py
docs/: architecture.md  getting-started.md
examples/: basic_usage.py
nis2expert/: __init__.py  config.py
nis2expert/auditing/: __init__.py
nis2expert/chains/: __init__.py
nis2expert/embeddings/: __init__.py
nis2expert/gap_analysis/: __init__.py
nis2expert/loaders/: __init__.py
nis2expert/reporting/: __init__.py
nis2expert/scoring/: __init__.py
nis2expert/splitters/: __init__.py
nis2expert/utils/: __init__.py
nis2expert/vectorstore/: __init__.py
src/: __init__.py
src/chains/: __init__.py  retrieval_chain.py
src/config/: __init__.py  config_loader.py
src/embeddings/: __init__.py  embedding_factory.py
src/loaders/: __init__.py  document_loader.py
src/splitters/: __init__.py  text_splitter.py
src/utils/: __init__.py  helpers.py
src/vectorstore/: __init__.py  vectorstore_factory.py
tests/: __init__.py  test_structure.py
